k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cress
  namespace: cress
spec:
  selector:
    app: cress
  ports:
    - port: 80
      targetPort: 80
