k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cress
  namespace: cress
spec:
  rules:
    - host: cress.simssa.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cress
                port:
                  number: 80
